--- a/MatchIt/POPBlock.plist
+++ b/MatchIt/POPBlock.plist
@@ -3,69 +3,69 @@
 <plist version="1.0">
 <dict>
 	<key>angle</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>angleVariance</key>
 	<real>360</real>
 	<key>blendFuncDestination</key>
 	<integer>771</integer>
 	<key>blendFuncSource</key>
-	<integer>775</integer>
+	<integer>770</integer>
 	<key>duration</key>
 	<real>0.5</real>
 	<key>emitterType</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>finishColorAlpha</key>
-	<real>0</real>
+	<real>1</real>
 	<key>finishColorBlue</key>
-	<real>0.5</real>
+	<real>1</real>
 	<key>finishColorGreen</key>
-	<real>0.5</real>
+	<real>1</real>
 	<key>finishColorRed</key>
-	<real>0.5</real>
+	<real>1</real>
 	<key>finishColorVarianceAlpha</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>finishColorVarianceBlue</key>
-	<real>0.5</real>
+	<real>1</real>
 	<key>finishColorVarianceGreen</key>
-	<real>0.5</real>
+	<real>1</real>
 	<key>finishColorVarianceRed</key>
-	<real>0.5</real>
+	<real>1</real>
 	<key>finishParticleSize</key>
-	<real>30</real>
+	<real>5</real>
 	<key>finishParticleSizeVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>gravityx</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>gravityy</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>maxParticles</key>
-	<real>50</real>
+	<real>40</real>
 	<key>maxRadius</key>
 	<real>100</real>
 	<key>maxRadiusVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>minRadius</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>particleLifespan</key>
-	<real>0.01999999955296516</real>
+	<real>0.05000000074505806</real>
 	<key>particleLifespanVariance</key>
-	<real>0.300000011920929</real>
+	<real>0.5</real>
 	<key>radialAccelVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>radialAcceleration</key>
 	<real>100</real>
 	<key>rotatePerSecond</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>rotatePerSecondVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>rotationEnd</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>rotationEndVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>rotationStart</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>rotationStartVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>sourcePositionVariancex</key>
 	<real>10</real>
 	<key>sourcePositionVariancey</key>
@@ -77,30 +77,32 @@
 	<key>speed</key>
 	<real>150</real>
 	<key>speedVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>startColorAlpha</key>
-	<real>0</real>
+	<real>1</real>
 	<key>startColorBlue</key>
-	<real>0.5</real>
+	<real>1</real>
 	<key>startColorGreen</key>
-	<real>0.5</real>
+	<real>1</real>
 	<key>startColorRed</key>
-	<real>0.5</real>
+	<real>1</real>
 	<key>startColorVarianceAlpha</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>startColorVarianceBlue</key>
-	<real>0.5</real>
+	<real>0.0</real>
 	<key>startColorVarianceGreen</key>
-	<real>0.5</real>
+	<real>0.0</real>
 	<key>startColorVarianceRed</key>
-	<real>0.5</real>
+	<real>0.0</real>
 	<key>startParticleSize</key>
-	<real>50</real>
+	<real>30</real>
 	<key>startParticleSizeVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>tangentialAccelVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>tangentialAcceleration</key>
-	<real>0</real>
+	<real>0.0</real>
+	<key>textureFileName</key>
+	<string>star_2.png</string>
 </dict>
 </plist>
